<resources>
    <string name="app_name">Kinematics Calculator </string>

    <string name="name_kinematics_forward">Forward Kinematics </string>
    <string name="name_kinematics_inverse">Inverse Kinematics</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="list_header_lp">i</string>

    <string name="list_header_alpha">α</string>
    <string name="list_header_a">a</string>
    <string name="list_header_theta">Θ</string>
    <string name="list_header_d">d</string>
</resources>
